--- a/index.html
+++ b/index.html
@@ -47,9 +47,22 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Khalida Nurilova</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/khalidanuri" target="_blank"
+            >Khalida Nurilova</a
+          >
+          and is
+          <a
+            href="https://github.com/khalidanuri/first-weather-project"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a
+            href="https://preeminent-bublanina-f14290.netlify.app/"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
